@@ -14,7 +14,7 @@ confdb0.proxy=false
 
 confdb1.dbSetup=HLTDEVv2 (socks tunnel)
 confdb1.dbType=oracle
-confdb1.dbHost=10.116.96.89
+confdb1.dbHost=10.116.96.139
 confdb1.dbPort=10121
 confdb1.dbName=cms_cond.cern.ch
 confdb1.dbUser=cms_hlt_gdr_w
